# mat-sci

./: .gitignore  README.md  pyproject.toml  requirements-full.txt  requirements.txt  run_all_critical_experiments.py  run_experiments.py
.github/workflows/: tests.yml
assembly_net/: __init__.py
assembly_net/data/: __init__.py  core.py  dataset.py  validated_simulator.py
assembly_net/data/synthetic_assembly_simulator/: __init__.py  simulator.py
assembly_net/experiments/: __init__.py  ablation_topology_vs_structure.py  assembly_order_randomization.py  critical_experiments.py  experiment_runner.py  figure1_visual_demo.py  publication_framework.py  run_publication_experiments.py
assembly_net/models/: __init__.py  baseline_static_gnn.py  property_heads.py  temporal_gnn.py  training.py
assembly_net/notebooks/: topology_evolution.ipynb  visualization_of_network_growth.ipynb
assembly_net/theory/: __init__.py  definitions.py  physical_constants.py
assembly_net/topology/: __init__.py  descriptors.py  graph_rigidity.py  persistent_homology.py
assembly_net/utils/: __init__.py  config.py  metrics.py  visualization.py
docs/: SIMULATOR.md  THEORY.md
publication_results/: all_results.json  all_results_summary.json  critical_experiments.json  experiment_log.txt  figure1_data.json  figure1_plot.py
tests/: test_simulator.py
